# Chess-Engine

./: CMakeLists.txt  README.md
chess_engine_ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
chess_engine_ui/chess_board/: chess_board.cpp  chess_board.h
src/: ChessBoard.cpp  ChessBoard.h  main.cpp
